package it.unibo.antsim.simulation;

/**
 * this enum class represents the execution states of the simulation engine
 */
public enum SimulationStatus {
    IDLE,
    RUNNING,
    PAUSED,
    STOPPED
}
