@startuml
    title Antism - Design

    skinparam classAttributeIconSize 0
    skinparam shadowing false
    skinparam packageStyle rectangle
    skinparam linetype ortho
    skinparam padding 6
    skinparam nodesep 40
    skinparam ranksep 40
    hide empty members

    package "Simulation Layer" {
        class SimulationEngine {
            - status: SimulationStatus
            - clock: SimulationClock
            - FoodCollected: int
            - world: world
            - pheromoneField: PheromoneField
            - decisionEngine: DecisionEngine
            - antGroup: AntGroup
            - antFactory: AntFactory
            - worldGenerator: WorldGenerator
            - generationParameters: GenerationParameters
            --
            + start(): void
            + pause(): void
            + resume(): void
            + stop(): void
            + step(dt: double): void
            + reset(): void
            + generateScenario(): void
            + createEmptyScenario(): void
            + foodPickup(dt: double): void
            + nestDelivery(): void
            + setAgentCount(targetCount: int): void
            + getStats(): SimulationStatistics
        }

        class SimulationClock {
            - currentStep: long
            - totalTime: double
            --
            + tick(dt: double): void
            + reset(): void
            + getCurrentStep(): long
            + getTotalTime(): double
        }

        class SimulationStatistics <<record>> {
            + currentStep: long
            + timeElapsed: double
            + activeAnts: int
            + foodCollected: int
        }

        enum SimulationStatus {
            IDLE
            RUNNING
            PAUSED
            STOPPED
        }
    }

    package "Agent Layer" {
        interface DecisionEngine {
            + DecideNextAngle(ant: Ant, world: World, pheromones: PheromoneField): double
        }

        class AcoDecisionEngine {
            - params: AcoParameters
            - random: RandomGenerator
            --
            + decideNextAngle(ant, world, pheromones): double
            - applyturnStrength(currentAngle, targetAngle): double
        }

        class AcoParameters <<record>> {
            + alpha: double
            + beta: double
            + sensorRange: double
            + sensorAngle: double
            + randomFactor: double
            + turnStrenght: double
        }

        class AntGroup {
            - ants: List<Ant>
            --
            + addAnt(ant: Ant): void
            + removeLast(): Ant
            + clear(): void
            + update(dt, world, pheromones, engine): void
        }

        class AntFactory {
            - defaultSpeed: double
            - random: RandomGenerator
            --
            + generateAntInNest(nest, width, height): Ant
        }

        class Ant
    }

    package "World Layer" {
        class World

        class WorldGenerator {
            - random: RandomGenerator
            --
            + generate(params: GenerationParameters): World
            - generateRockClusters(world, nest, params): void
            - generateFoodClusters(world, nest, params): void
        }

        class GenerationParameters <<record>> {
            + rows: int
            + cols: int
            + cellWidth: double
            + cellHeight: double
            + rockProbability: double
            + numRockClusters: int
            + numFoodClusters: int
            + foodQuantityPerCell: int
            + nestCleareanceRadius: int
        }
    }

    package "Pheromone Layer" {
        interface PheromoneField

        class PheromoneMap {
            - evaporationModel: EvaporationModel
        }

        interface EvaporationModel {
            + decay(currentLevel: double, dt: double): double
        }

        class Evaporation <<record>> {
            + decayRate: double
        }
    }

    '--- ALINEAMENTO PACKAGE ---
    "Simulation Layer" -[hidden]down-> "Agent Layer"
    "Agent Layer" -[hidden]right-> "World Layer"
    "World Layer" -[hidden]right-> "Pheromone Layer"

    '--- RELAZIONI SIMULATION LAYER ---
    SimulationEngine *-- SimulationClock
    SimulationEngine *-- AntGroup
    SimulationEngine --> SimulationStatus
    SimulationEngine --> World
    SimulationEngine --> PheromoneField
    SimulationEngine --> DecisionEngine
    SimulationEngine --> AntFactory
    SimulationEngine --> WorldGenerator
    SimulationEngine --> GenerationParameters
    SimulationEngine ..> SimulationStatistics : crea

    '--- RELAZIONI AGENT LAYER ---
    DecisionEngine <|.. AcoDecisionEngine
    AcoDecisionEngine --> AcoParameters : configurazione
    AntGroup *-- "0..*" Ant
    AntFactory ..> Ant : crea
    AntFactory --> World : usa il nido
    AntGroup --> DecisionEngine : delega decisione
    AntGroup --> PheromoneField
    AntGroup --> World

    '--- RELAZIONI WORLD LAYER ---
    WorldGenerator --> GenerationParameters
    WorldGenerator ..> World : crea

    '--- RELAZIONI PHEROMONE LAYER ---
    PheromoneField <|.. PheromoneMap
    EvaporationModel <|.. Evaporation
    PheromoneMap --> EvaporationModel : strategia

    ' --- NOTE ---
    note right of SimulationEngine
        Ciclo di vita, ovvero movimento,
        raccolta e consegna del cibo e deposita
        ed evaporazione feromoni.
    end note

    note right of DecisionEngine
        Permette di cambiare l'algoritmo
        decisionale senza modificare SimulationEngine o Ant.
    end note

    note bottom of EvaporationModel
        Rende sostituibile il
        modello matematico di evaporazione.
    end note
@enduml